--- a/Microsoft.Toolkit.Uwp.SampleApp/Microsoft.Toolkit.Uwp.SampleApp.csproj
+++ b/Microsoft.Toolkit.Uwp.SampleApp/Microsoft.Toolkit.Uwp.SampleApp.csproj
@@ -172,6 +172,7 @@
     <Content Include="Assets\People\petri.png" />
     <Content Include="Assets\People\shen.png" />
     <Content Include="Assets\People\vlad.png" />
+    <Content Include="Assets\Photos\ales-krivec-43430.jpg" />
     <Content Include="Assets\Photos\BigFourSummerHeat.jpg" />
     <Content Include="Assets\Photos\BisonBadlandsChillin.jpg" />
     <Content Include="Assets\Photos\ColumbiaRiverGorge.jpg" />
@@ -188,7 +189,6 @@
     <Content Include="Assets\Photos\OregonWineryNamaste.jpg" />
     <Content Include="Assets\Photos\Owl.jpg" />
     <Content Include="Assets\Photos\PaintedHillsPathway.jpg" />
-    <Content Include="Assets\Photos\ron-manke-20667.jpg" />
     <Content Include="Assets\Photos\RunningDogPacificCity.jpg" />
     <Content Include="Assets\Photos\ShootingOnAutoOnTheDrone.jpg" />
     <Content Include="Assets\Photos\SmithnRockDownTheRiverView.jpg" />
@@ -284,6 +284,7 @@
     <Content Include="SamplePages\Bing Service\icon.png" />
     <Content Include="SamplePages\BluetoothLEHelper\BluetoothLEHelper.png" />
     <Content Include="SamplePages\Blur\BlurBehavior.png" />
+    <Content Include="SamplePages\Connected Animations\ConnectedAnimations.png" />
     <Content Include="SamplePages\DispatcherHelper\DispatchHelper.png" />
     <Content Include="SamplePages\DockPanel\DockPanel.png" />
     <Content Include="SamplePages\Facebook Service\FacebookLogo.png" />
@@ -306,6 +307,7 @@
     <Content Include="SamplePages\HeaderedTextBlock\HeaderedTextBlock.png" />
     <Content Include="SamplePages\ImageCache\ImageCache.png" />
     <Content Include="SamplePages\ImageEx\ImageEx.png" />
+    <Content Include="SamplePages\Implicit Animations\ImplicitAnimations.png" />
     <Content Include="SamplePages\InAppNotification\InAppNotification.png" />
     <Content Include="SamplePages\Incremental Loading Collection\icon.png" />
     <Content Include="SamplePages\Light\LightBehavior.png" />
@@ -353,6 +355,7 @@
     <Content Include="SamplePages\HamburgerMenu\HamburgerMenuCode.bind" />
     <Content Include="SamplePages\HeaderedTextBlock\HeaderedTextBlockCode.bind" />
     <Content Include="SamplePages\ViewExtensions\ViewExtensions.png" />
+    <Content Include="SamplePages\Visual Extensions\VisualExtensions.png" />
     <Content Include="SamplePages\WrapPanel\WrapPanel.png" />
     <Content Include="landingPageLinks.json" />
     <None Include="Microsoft.Toolkit.Uwp.SampleApp.ruleset" />
@@ -1138,7 +1141,7 @@
       </AppxPackagePayload>
     </ItemGroup>
   </Target>
-   <!--https://weblogs.asp.net/rweigelt/disable-warnings-in-generated-c-files-of-uwp-app--> 
+  <!--https://weblogs.asp.net/rweigelt/disable-warnings-in-generated-c-files-of-uwp-app-->
   <Target Name="PragmaWarningDisablePrefixer" AfterTargets="MarkupCompilePass2">
     <ItemGroup>
       <GeneratedCSFiles Include="**\*.g.cs;**\*.g.i.cs" />
