-Split the Markdown Parser from MarkdownTextBlock.
-Made required Parsing Classes and Enums public (I know I could have done InternalsVisibleTo, but then the Parser wouldn't be extensible.

-Moved Parser to Microsoft.Toolkit.Services, seemed most relevant, but could be moved elsewhere.

--- a/Microsoft.Toolkit.Uwp.UI.Controls/Microsoft.Toolkit.Uwp.UI.Controls.csproj
+++ b/Microsoft.Toolkit.Uwp.UI.Controls/Microsoft.Toolkit.Uwp.UI.Controls.csproj
@@ -13,7 +13,7 @@
 
     <PackageReference Include="Robmikh.CompositionSurfaceFactory" Version="0.7.3" />
     <ProjectReference Include="..\Microsoft.Toolkit.Uwp.UI.Animations\Microsoft.Toolkit.Uwp.UI.Animations.csproj" />
-
+    <ProjectReference Include="..\Microsoft.Toolkit.Services\Microsoft.Toolkit.Services.csproj" />
   </ItemGroup>
  
   <ItemGroup>
