--- a/appveyor.yml
+++ b/appveyor.yml
@@ -11,7 +11,9 @@ branches:
 
 environment:
   SignClientSecret:
-    secure: erZhzDCn/vhjD2zlGbG9BITzFL4/sIThwMXrmUnFDY2LxUXSZG5Q/tr0pTEPbcm8
+    secure: 5Kl9ANR27CzPrrsGm8ZuJ/Cekxv9QH1xL8AhQaT6nlo=
+  SignClientUser:
+    secure: hVgiMEgTra+fsHTHm20UnsefKzy9peTQenuwITEwEsUXJg8NymUVMcAbOtV1RMkf
 
 skip_branch_with_pr: true
 nuget:
